[package]
name = "ebene"
version = "0.2.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

readme = "README.md"
description = "A unique search technology"
documentation = "https://docs.rs/ebene"
repository = "https://github.com/shepmaster/ebene"

license = "MIT OR Apache-2.0"

keywords = ["search-engine"]

[workspace]
members = ["explore"]

[dev-dependencies]
quickcheck = "0.9"
rand = "0.7"
